# tldd

./: .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: deploy.yaml
backend/: .gitignore  .pre-commit-config.yaml  Dockerfile  pyproject.toml
backend/src/app/: email.html  main.py  models.py
backend/src/app/prompts/: default.txt  prior.txt  system.txt
frontend/: .prettierrc  README.md  babel.config.js  cors-config.json  manifest.lkml  package-lock.json  package.json  tailwind.config.js  tsconfig.json  webpack.config.js  webpack.develop.js  webpack.prod.js
frontend/src/: App.tsx  HelloWorld.tsx  index.tsx  types.ts  utils.ts
frontend/src/components/: Button.tsx  Checkbox.tsx  EditSummarizerForm.tsx  Input.tsx  SummarizerForm.tsx  SummarizerTable.tsx  SummarizerWebhook.tsx  TestSummaryButton.tsx  TextArea.tsx  index.ts
frontend/src/components/icons/: CheckCircle.tsx  Clipboard.tsx  X.tsx  index.ts
frontend/src/context/: ApiContext.tsx
frontend/src/hooks/: useVerifyContext.ts
frontend/src/pages/: CreateSummarizer.tsx  EditSummarizer.tsx  ListSummarizers.tsx  index.ts
src/vertex_dashboards/: __init__.py  main.py  models.py  payload.json
terraform/: .terraform.lock.hcl  main.tf  variables.auto.tfvars  variables.tf
tmp/: terraform_cred_config.json  terraform_cred_config_2.json
